--- a/contact.css
+++ b/contact.css
@@ -1,298 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Roboto:wght@100;400&display=swap');
-@font-face{
-    font-family: Atteron personal use;
-    src: url(Atteron\ Personal\ Use\ Only.ttf);
-    font-family: Bell MT Regular;
-    src: url(Bell\ MT\ Regular.otf);
-    font-family: Candara;
-    src: url(Candara_Bold.ttf);
-    font-family: Candara Regular;
-    src: url(Candara.ttf);
-    font-family: Calibri;
-    src: url(calibril.ttf);
-}
-body{
-    margin: 0;
-    padding: 0;
-}
-/* navbar */
-nav{
-justify-content: center;
-align-items: center;
-height: 40px;
-display: flex;
-padding-left: 38px;
-}
-.link{
-align-items: center;
-list-style: none;
-justify-content: space-between;
-display: flex;
-gap: 9rem;
-padding-right: 45px;
-font-size: large;     
-font-family: calibri;
-font-weight: 200;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GET IN TOUCH</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="contact.css">
+    <link rel="icon" href="PP (1).png" sizes="32x32">
 
-.links>a{
-text-decoration: none;
-color: white;
-}     
-.links>a:hover{
-color: rgb(223, 168, 52);
-}
-.links{
-color:white;
-}
-.links:hover{
-color: rgb(223, 168, 52);
-}
-img{
-height: 100px;
-color: white;
-}
-.container{
-width: 100%;
-display: flex;
-justify-content: center;
+</head>
+<body>
+    <!-- navigation bar -->
+     <div class="hero">
+    <div class="container">
+      <a href="Home.html"><img src="logo/Photophile Logo Brown.png" alt=""></a>
+    </div>
+        <nav>
+            <ul class="link">
+                <li class="links"><a href="Home.html">Home</a></li>
+                <li class="links"><a href="stories.html">Stories</a></li>
+                <li class="links"><a href="films.html">Films</a></li>
+                <li class="links"><a href="aboutus.html">About</a></li>
+                <li class="links"><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
 
-}
-.hero{
-    height: 685px;
-    width: 100%;
-background-image: url(contact/AA.jpg);
-background-size: cover;
-/* background-position: center; */
- background-attachment: fixed; 
-}
+        <!-- contant -->
+        <div class="text">
+          <div class="contact">
+          <b>C O N T A C T </b>
+          <b>U S</b>
+        </div>
+          <p>YOUR STORY BEGINS HERE</p>
+        </div>
+     </div>     <br>
+     <div class="text1">
+      <div class="contact">
+      <span>L E T ' S </span>
+      <span>S T A R T</span>
+      <span> Y O U R </span>
+      <span>J O U R N E Y</span>
+      </div>
+      <p>we'd love to hear from you ! feel free to reach out to us using the contact details provided below or simply fill out the form, and we'll get back to you as soon as possible. </p>
+     </div>
+        <br>
+        <!-- contact -->
+        <h1>GET IN TOUCH </h1>
+   <div class="container4">
+    <div class="slider">
+    </div>
+         <div class="form-section">
+           <br><br> <br><br>
+           <form action="">
+            <div class="form-row">
+              <label for="">First Name*</label>
+              <label for="">Last Name*</label>
+            </div>
+           <div class="form-row">
+            <input type="text" required>            
+            <input type="text" required>            
+           </div>
 
-/* content */
-.text{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    color: white;
-    /* text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3); */
+           <div class="form-row">
+            <label for="" style="width: 100px;">Code*</label>
+            <label for="" >Phone*</label>           
+          </div>
+           <div class="form-row">
+             <select name="" id="" style="width: 100px;">
+              <option value="">IN +91</option>
+              <option value="">AW +297</option>
+              <option value="">AQ +244</option>
+              <option value="">AF +93</option>
+              <option value="">AF +93</option>
+              <option value="">AI +1</option>
+              <option value="">AX +358</option>
+              <option value="">AL +355</option>
+              <option value="">AD +376</option>
+              <option value="">AE +917</option>
+              <option value="">AR +54</option>
+              <option value="">AM +374</option>
+              <option value="">AS +1684</option>
+              <option value="">AQ +672</option>
+              <option value="">TF +262</option>
+              <option value="">AG +1</option>
+              <option value="">AU +61</option>
+              <option value="">AT +43</option>
+             </select>
+             <input type="tel" required>            
+           </div> 
 
-}
-.text b{
-    font-family: Candara;
-    font-size: 50px;
-}
-.text p{
-    font-family: Candara Regular;
-    font-size: larger;
-}
-.contact{
-    gap: 2rem;
-    display: flex;
-    justify-content: center;
-}
-.text1 .contact{
-    gap: 1rem;
-    display: flex;
-    justify-content: center;
-    
-}
-.text1{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-}
-span{
-    font-family: Candara Regular;
-    font-size: 30px;
-    color: #564332;
-}
-.text1 p{
-    font-family: Calibri;
-    width: 45%;
-    color: #564332;
-}
-/* fade image */
-.slider{
-    height: 450px;
-    width: 300px;
-    animation: slide 15s infinite;
-    background-image: url(contact/001GIT.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    border-radius: 8px;
-}
-@keyframes slide{
-    20%{
-        background: url(contact/001GIT.jpg);
-    }
-    40%{
-        background: url(contact/002GIT.jpg);
-    }
-    60%{
-        background: url(contact/003GIT.jpg);
-    }
-    80%{
-        background: url(contact/004GIT.jpg);
-    }
-    100%{
-        background: url(contact/005GIT.jpg);
-    }            
-}     
-  /*contact form  */
-.container4{
-    height: 700px;
-width: 100%;
-display: flex;
-justify-content: center;
-align-items: center;
-gap: 5rem;
-background-color: #E7E3D8;
-}
-.container4 img{
-height: 450px;
-width: 300px;
-}
-h1{
-font-family: Atteron personal use;
-font-weight: 100;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-form{
-position: relative;
-display: grid;
-width: 400px;
-height: 570px;
-flex-direction: column;
-}
-.container4 p{
-font-family: Bell MT Regular;
-}
-button{
-font-family: Bell MT Regular;
-/* background: white; */
-height: 35px;
-width: 115px;
-}
-.button{
-display: flex;
-justify-content: center;
-}
+           <label for="">Email*</label> 
+           <input type="email" required>
 
-form {
-display: flex;
-flex-direction: column;
-gap: 15px;
-}
+           <div class="form-row">
+            <label for="">About the Events*</label>
+            <label for="">Location*</label>
+          </div>
+           <div class="form-row">
+             <input type="text" required>
+             <input type="text" required>
+           </div>
 
-.form-row {
-display: flex;
-gap: 15px;
+           <label for="">Details of all the events, timing, No.of guest*</label>
+           <textarea name="" id=""></textarea>
+           
+           <div class="form-row">
+            <label for="">Link to moodboard or reference (if any)</label>
+            <label for="">How did you hear about us*</label>
+          </div>
+           <div class="form-row">
+             <input type="text" >
+             <input type="text" required>
+           </div><br>
+          <div class="button">
+           <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submit</b></button>
+           </div>
+         </form>
+         </div>
+   </div><br><br>
 
-}
-label{
-font-family: Bell MT Regular;
-width: 500px;
-background-color: transparent;
-}
-input, textarea {
-width: 100%;
-padding: 5px 0;
-border: none;
-border-bottom: 2px solid #000;
-font-size: 14px;
-background: none;
-outline: none;
-}
+   <div class="text">
+    <div class="contact" style="color: #564332; font-size: xx-large;">
+    <p>C O N T A C T </p>
+    <p>U S</p>
+</div> 
+<div class="no">
+  <p><i class="fa-solid fa-phone"></i> +91 99671 07339</p>
+  <p><i class="fa-solid fa-envelope"></i> photophilephotosandfilms@gmail.com</p>
+</div>
+   </div><br><br><br>
 
-textarea {
-resize: none;
-height: 80px;
-}
-select{
-    border: none;
-    border-bottom: 2px solid black;
-    background-color: transparent;
-}
-option{
-    height: 100px;
-}
+   <!-- map -->
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.5124604001817!2d72.84974037466644!3d19.129032650306588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b74da7584b0d%3A0xec35462a99ae449d!2sPhotophile%20Photos%20%26%20Films!5e0!3m2!1sen!2sin!4v1740661732180!5m2!1sen!2sin" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      <br><p>Andheri, Mumbai, India </p>
+    </div><br><br>
 
-/* map */
-.map{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.map p{
-    font-family: Candara Regular;
-    color: #564332;
-    font-size: larger;
-}
-.no{
-    font-family: Candara Regular;
-    color: #564332;
-    display: flex;
-    gap: 15rem;
-    justify-content: center;
-    padding-left: 107px;
-}
+    <!-- question -->
+     <div class="question">
+      <p>F R E Q U E N T L Y</p>
+        <p>A S K E D</p>
+        <p>Q U E S T I O N S</p>
+     </div>
 
-/* question */
-.question{
-    font-family: Bell MT Regular;
-    font-size: xx-large;
-    color: #564332;
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    font-weight: 600;
-    align-items: center;
-}
-.QA{
-    font-family:Candara Regular;
-    color: #564332;
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    padding: 50px;
-}
-.QA1{
-    width: 2597px;
-}
+     <div class="QA">
+      <div class="QA1">
+      <b>What services does Photophile Photos & films offer?</b>
+      <p>We offers professional photography and videography services, specializing in weddings. We also provide services for portraits, commercial & Event projects, and Maternity, toodler & Family photography.</p>
 
-/* footer */
-footer{
-width: 100%;
-height: 300px;
-background-color: #E7E3D8;
-display: flex;
-align-items: center;
-flex-wrap: wrap;
-flex-direction: column;
-justify-content: center;
-}
-footer img{
-height: 30px;
-}
-.footer_icon{
-display: flex;
-gap: 2rem;
-}
-.icon{
-transition: all 0.3s linear;
-}
-.icon:hover{
-transform: scale(1.5);
-}
-footer p{
-display: flex;
-justify-content: center;
-align-items: center;
-color: #564332;
-text-align: center;
-}
+      <b>What are your rates for photography and videography services?</b>
+      <p>Our packages are totally customized based on your days of events, number of events, guest count, and location. We feel if each wedding film is unique so should their packages be. For more details kindly fill out our contact form or contact us and we will be happy to assist you further.</p>
+
+      <b>How can I book a session with Phootophile Photos & Films?</b>
+      <p>You can book a session by contacting us through our website, email, or phone. Please provide your event date, location, and type of photography/videography you need.</p>
+
+      <b>How far in advance should I book your services?</b>
+      <p>We recommend booking as early as possible to secure your date, especially for weddings and large events. Ideally, bookings should be made at least 8-9 months in advance.</p>
+      </div>
+
+      <div class="QA2">
+        <b>Do you travel for shoots?</b>
+        <p>Yes, we are available for travel. Additional travel costs will apply depending on the location of the shoot.</p>
+
+        <b>How long does it take before we receive our photos and films?</b>
+        <p>Your photographs get ready in 20-25 days after the event coverage. Wedding Films are something which shows best of the moments which are meant to be cherished for a lifetime. We try our best to depict the wedding mood through the films which are processed within 3 months after the wedding.  We also provide an online gallery of your photos which can be easily shared and accessed over phones.</p>
+
+        <b>What is a copyright? Can Photophile photos & films use our images and footage on its social media handles?</b>
+        <p>All original works of art, including photos and video works have a copyright. This means that the creator of an image/video owns the copyright for the same. Hence, Photophile photos & films can use any images/videos on our social media channels for social media posts, marketing and portfolio are a matter of pride for all the clients and vendors involved. If the couple do not want their images/videos to be shared publicly, this has to specified explicitly at the time of signing the contract.</p>
+
+      </div>
+     </div>
+
+   <!-- footer -->
+   <footer>
+    <div class="footer_icon">
+    <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="logo/FB Logo.png"alt=""></a>
+    <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="logo/YT Logo.png" alt=""></a>
+    <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="logo/Instagram Logo.png" alt=""></a>
+    </div><br><br>
+    <p>ALL RIGHT RESERVED 2024 @ PHOTOPHILE PHOTOS & FILMS <br> <br>
+    Email us on : Photophilephotosandfilms@gmail.com <br>
+    Contact Number : +91 9967107339</P>    
+  </footer>
+</body>
+</html>
